[tool.poetry]
name = "pcc-tee-times"
version = "0.1.0"
description = ""
authors = ["Kathy Ems <kathy-ems@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.8.0"
joblib = "^1.2.0"
webdriver-manager = "^3.8.5"
python-dotenv = "^0.21.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
